# neurodamus

./: .coveralls.yml  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.md  Dockerfile  README.rst  bau.txt  cellstate_5_ref.json  concretization.txt  coverage.ini  mpi_hello_world.c  mpi_hello_world.py  pyproject.toml  requirements.txt  test.py  tox.ini
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  general.md
.github/workflows/: coverage.yml  coverage_old  docker-image.yml  docker_images.yml  integration-test.yml  lint_check.yml  publish_wheels.yml  simulation_test.yml  unit-test.yml  unit-tests.yml
_benchmarks/: synstats.py
_benchmarks/opti_configure_0.2.2/: line_stats.0.txt  line_stats.txt
ci/: 0001-Revert-Use-aligned_alloc-as-we-do-in-CoreNEURON-too-.patch  Dockerfile  build-dependencies.sh  build_ndcore.sh
ci/scripts/: README.md  build-libsonata.sh  build-libsonatareport.sh  build-neocortex-models.sh  build-neurodamus-models.sh  build-neurodamus.sh  build-neuron.sh  install-apt-dependencies.sh  install-aws-deps.sh  install-dnf-dependencies.sh  install-h5py.sh  install-hdf5.sh  install-mpi4py.sh  install-python-dependencies.sh  install-sccache.sh  make-build-neurodamus-models.sh  make-env.sh  make-neocortex-env.sh  make-neurodamus-nrnivmodl.sh
docker/: Dockerfile  README.md  build_neurodamus.sh
docs/: conf.py  development.rst  index.rst  inputs.rst  sonata-simulation.rst
docs/_build/: .buildinfo  architecture.html  changes.html  development.html  examples.html  genindex.html  index.html  inputs.html  memory_load_balance.html  metadata.json  metadata.md  objects.inv  online-lfp.html  overview.html  py-modindex.html  search.html  searchindex.js  sonata-faq.html  sonata-simulation.html
docs/_build/.doctrees/: architecture.doctree  changes.doctree  development.doctree  environment.pickle  examples.doctree  index.doctree  inputs.doctree  memory_load_balance.doctree  online-lfp.doctree  overview.doctree  sonata-faq.doctree  sonata-simulation.doctree
docs/_build/_sources/: index.rst.txt  inputs.rst.txt
docs/_build/_static/: documentation_options.js
docs/_build/api/: modules.html  (+5 more)
docs/api/: neurodamus.io.rst  neurodamus.rst  neurodamus.utils.rst
docs/source/: architecture.rst  build_mod_files.rst  conf.py  development.rst  examples.rst  index.rst  inputs.rst  lfp.rst  memory_load_balance.rst  neuromodulation.rst  ngv.rst  outputs.rst  overview.rst  sonata-faq.rst  sonata-simulation.rst
examples/: test_neurodamus.py
neurodamus/: __init__.py  _metadata.py  allen_point.py  cell_distributor.py  commands.py  connection.py  connection_manager.py  gap_junction.py  gap_junction_user_corrections.py  gj_user_corrections.py  hocify.py  lfp_manager.py  lfp_reader.py  metype.py  modification_manager.py  morphio_wrapper.py  neuromodulation_manager.py  ngv.py  node.py  replay.py  report.py  report_parameters.py  stimulus_manager.py  target_manager.py  types.py  weighted_summation_report.py
neurodamus/core/: __init__.py  _engine.py  _mpi.py  _neurodamus.py  _neuron.py  _shmutils.py  _utils.py  cell.py  configuration.py  coreneuron_configuration.py  coreneuron_report_config.py  coreneuron_simulation_config.py  mechanisms.py  nodeset.py  random.py  stimuli.py  synapses.py
neurodamus/data/: init.py
neurodamus/io/: cell_readers.py  lfp_reader.py  sonata_config.py  synapse_reader.py
neurodamus/utils/: __init__.py  cli.py  compat.py  compile_mods.py  dump_cellstate.py  logging.py  memory.py  multimap.py  progressbar.py  pyutils.py  timeit.py  version.py
removeme/: simulation_config.json
removeme/output/: out.h5
tests/: conftest.py  requirements.txt  test_import.py  utils.py
tests/integration/: conftest.py  test_ringcells.py
tests/integration-e2e/: conftest.py  test_cli_opts.py  test_connection.py  test_coreneuron_directmode.py  test_crashmode.py  test_dry_run_workflow.py  test_error_handling.py  test_loadbalance.py  test_loadbalance_integration.py  test_multicycle_runs.py  test_plugin.py  test_removeme.py  test_reports.py
tests/mpi/: requirements.txt  test_base.py
tests/scientific/: test_current_injection.py  test_extracellular_stimulation.py  test_lfp.py  test_multipop.py  test_neuromodulation.py  test_patched_delays.py  test_projections.py  test_replay.py  test_simulation.py  test_sonata_properties.py  test_spont_minis.py  test_synapses.py  test_v5_modification.py
tests/scientific-ngv/: test_astrocyte.py  test_ngv.py
tests/simulations/: utils.py
tests/unit/: conftest.py  debug_ringtest.py  test_cell.py  test_cell_permute.py  test_circuitconfig.py  test_cli.py  test_cli_shm.py  test_compartment_set_stimulus.py  test_compile_mods.py  test_conn_manager.py  test_connection.py  test_connection_overrides.py  test_coords.py  test_core_config.py  test_coreneuron.py  test_coreneuron_directmode.py  test_coreneuron_multicycle.py  test_coreneuron_report_config.py  test_coreneuron_save_restore.py  test_coreneuron_simulation_config.py  test_current_injection.py  test_dry_run.py  test_dump_cell_state.py  test_extracellular_stimulus.py  test_gapjunctions.py  test_lfp.py  test_lfp_reader.py  test_loadbalance.py  test_metype.py  test_modification.py  test_modifications.py  test_morphIOwrapper.py  test_mpi.py  test_multimap.py  test_multiple_extracellular_stimuli.py  test_multiple_extracellular_stimulus.py  test_neuron.py  test_ngv.py  test_nodeset.py  test_nodeset_target.py  (+21 more)
tests/unit-allen-v1/: test_ringcells_allen_v1.py
tests/unit-allen-v1-mpi/: test_ringcells_allen_v1.py
tests/unit-dryrun/: test_dry_run.py
tests/unit-dryrun-mpi/: test_dry_run.py
tests/unit-mpi/: requirements.txt  test_base.py  test_condition_modifications.py  test_dry_run.py  test_extracellular_stimulus.py  test_loadbalance.py
tests/unit-ngv/: test_astrocyte.py  test_distribution.py  test_ngv.py  test_radii_change.py
tests/unit-ngv-mpi/: test_astrocyte.py  test_distribution.py  test_dump_cellstate.py  test_radii_change.py
tools/: efield_demo.py  toolbox.py
tools/ringtest/: cell.hoc  dump_cellstate.py  ring.py  testdata.py
(+211 files in other folders)
