[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name="neurodamus"
authors = [
    {name = "Blue Brain Project, EPFL"},
]
description = "A BBP Simulation Control application for NEURON"
license = {file = "LICENSE.txt"}
readme = "README.rst"
dynamic = ["version"]
dependencies = [
    "h5py",
    "docopt-ng",
    "libsonata",
    "psutil"
]
requires-python=">=3.9"

[project.optional-dependencies]
plotting=['matplotlib'] # only for Neurodamus HL API
full=['scipy', 'morphio', 'NEURON']

[project.scripts]
neurodamus = "neurodamus.commands:neurodamus"
hocify = "neurodamus.commands:hocify"

[project.urls]
Homepage = "https://github.com/BlueBrain/neurodamus"
Repository = "https://github.com/BlueBrain/neurodamus.git"
Tracker = "https://github.com/BlueBrain/neurodamus/issues"

[tool.hatch.build.targets.sdist]
only-include = [
    "neurodamus",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-vv",
    "-ra",
]
markers = ["slow: marks tests as slow"]

[tool.flake8]
exclude = [".*", "__pycache__", ".eggs", "*.egg", "build", "dist", "docs", "venv", "*.egg-info", "_benchmarks", "core", ".tox"]
extend-ignore = [
    "E127",  # continuation line over-indented for visual indent
    "E203",  # whitespace before ':'
    "E221",  # multiple spaces before operator
    "E226",  # missing whitespace around arithmetic operator
    "E701",  # multiple statements on one line (colon)
    "E731",  # do not assign a lambda expression, use a def
    "PT001", # use @pytest.fixture over @pytest.fixture()
    "PT023", # use @pytest.mark.foo over @pytest.mark.foo()
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
]
max-line-length = 100

[tool.coverage.run]
branch = false
parallel = false
relative_files = true
source_pkgs = [
    "neurodamus",
]

[tool.coverage.paths]
source = [
    "neurodamus/",
    "*/site-packages/neurodamus"
]

[tool.coverage.report]
show_missing = true
precision = 0

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint.isort]
known-local-folder = [
    "neurodamus",
]
combine-as-imports = true
